Implement get quizzes
